--- a/website.htm
+++ b/website.htm
@@ -27,7 +27,10 @@
     <li><a href="#subpage1">Subpage 1</a></li>
     <li><a href="#subpage2">Subpage 2</a></li>
     <li><a href="#subpage3">Subpage 3</a></li>
-  </ul>
+	<li><a href="#subpage4">Subpage 4</a></li>
+	<li><a href="#subpage5">Subpage 5</a></li>
+	<li><a href="#subpage6">Subpage 6</a></li>
+	<li><a href="#subpage7">Subpage 8</a></li>
 </div>
 
 <!-- Subpages content -->
