--- a/website.htm
+++ b/website.htm
@@ -27,6 +27,8 @@
     <li><a href="#subpage1">Subpage 1</a></li>
     <li><a href="#subpage2">Subpage 2</a></li>
     <li><a href="#subpage3">Subpage 3</a></li>
+    <li><a href="#subpage4">Subpage 4</a></li>
+    <li><a href="#subpage5">Subpage 5</a></li>
   </ul>
 </div>
 
